<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Income4">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="01. Assessment Year"/>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:weightSum="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:text="2"
                        android:textAlignment="center"/>
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:text="0"
                        android:textAlignment="center"/>
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:hint="2"
                        android:textAlignment="center"/>
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:hint="0"
                        android:textAlignment="center"/>
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:hint="2"
                        android:textAlignment="center"/>
                    <EditText
                        android:background="@drawable/border"
                        android:layout_weight="1"
                        android:layout_width="40dp"
                        android:layout_height="49dp"
                        android:hint="1"
                        android:textAlignment="center"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="02. TIN"
                    android:textSize="18dp"/>
                <EditText
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/border"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:hint="Enter TIN ID"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:background="@drawable/border2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Particulars of rebatable\ninvestment, contribution, etc."
                    android:textStyle="bold"
                    />
                <TextView
                    android:background="@drawable/border2"
                    android:layout_marginLeft="90dp"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="Amount(৳)"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="03.Life insurance premium"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/et2"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="05. Investment in approvedsavings certificate "
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/et3"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/et4"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/et5"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="09. Contribution to Super Annuation Fund "
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/et6"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="11. Contribution to Zakat Fund"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="12. Others, if any(give details)"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="13. Total allowable investment, contribution etc. "
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="14. Eligible amount for rebate (the lesser of 14A, 14B or 14C) "
                android:textColor="#000"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="14A Total allowable investment, contribution, etc. (as in 13) "
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/et7"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="14C 1.5 crore"
                    android:gravity="center"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="60dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/et8"
                    android:textColor="#000"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>